more work on DataGroupToRecordEnhancer
start breaking out LinkAuthorizator